[package]
name = "msp430_pcb_self_test"
version = "0.0.1"
authors = ["Ross Porter <rossporter506@gmail.com>"]
edition = "2018"
description = "Self test program for Kessler's payload board with MSP430fr2355"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YuhanLiin/msp430fr2x5x-hal"
keywords = ["no-std", "msp430", "ti", "launchpad", "embedded-hal"]
documentation = "https://docs.rs/msp430fr2x5x-hal"

[features]
debug = []

[dependencies]
nb = "0.1.3"
void = { version = "1.0.2", default-features = false }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
#msp430fr2355 = { version = "0.5.1", features = ["rt", "critical-section"] }
panic-msp430 = "0.4.0"
panic-never = "0.1.0"
msp430-rt = "0.4.0"
critical-section = "1.0.0"
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }
no-std-compat="0.4.1"
ufmt ="0.2.0"
fixed="2.0.0-alpha.11"
[dependencies.msp430fr2x5x-hal]
    path = "msp430fr2x5x-hal"
[dependencies.msp430fr2355]
    path = "msp430fr2355"
    features = ["rt", "critical-section"]

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "on"
strip = true

[profile.dev]
opt-level = "s"
codegen-units = 1
lto = "fat"
debug = true

[profile.dev.package."*"]
opt-level = "z"

[profile.dev.package.compiler_builtins]
overflow-checks = false