[package]
name = "msp430_pcb_self_test"
version = "0.0.1"
authors = ["Ross Porter <rossporter506@gmail.com>"]
edition = "2021"
description = "Self test program for Kessler's payload board with MSP430fr2355"
publish = false
repository = "https://github.com/RossPorter506/KesslerPayloadSelfTest"
keywords = ["no-std", "msp430", "ti", "launchpad", "embedded-hal"]

[features]
debug_print = []

[dependencies]
nb = "0.1.3"
void = { version = "1.0.2", default-features = false }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
msp430fr2355 = { version = "0.5.1", features = ["rt", "critical-section"] }
msp430fr2x5x-hal = {git = "https://github.com/YuhanLiin/msp430fr2x5x-hal", features = ["embedded-hal-02"]}
panic-msp430 = "0.4.0"
panic-never = "0.1.0"
msp430-rt = "0.4.0"
critical-section = "1.0.0"
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }
ufmt ="0.2.0"
fixed="2.0.0-alpha.11"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = "debuginfo" # Replace with 'true' to make final executable smaller, but unable to analyze with cargo bloat.

[profile.dev]
opt-level = "z"
codegen-units = 1
lto = "fat"
debug = true
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev.package.compiler_builtins]
overflow-checks = false